<resources>
    <string name="app_name">Jstore</string>
    <string name="aplikasi_jual_beli_online">Aplikasi Jual Beli Online</string>
    <string name="welcome">WELCOME</string>
    <string name="login_to_start_with_jstore">Login to start with JStore</string>
    <string name="admin_login_here">Admin Login Here</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up_here">Sign Up here.</string>
    <string name="start_looking_for_yout_outfit">Start looking for yout outfit!</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="register_here">Register Here</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="enter_your_old_pass">Enter your old password here</string>
    <string name="enter_your_connew_pass">Enter your confirm new password here</string>
    <string name="enter_your_new_pass">Enter your new password here</string>
    <string name="enter_your_firstName_here">Enter your first name here</string>
    <string name="enter_your_lastName_here">Enter your last name here</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="firstName">First Name</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmnewPassword">Confirm New Password</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="produk_yang_dibeli">Produk yang di beli :</string>
    <string name="enter_your_address_here">Enter your address here</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number_here">Enter your phone number here</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="do_you_have_an_account_login_here">Do you have an account? Login here.</string>
    <string name="admin_login_page">Admin Login Page</string>
    <string name="user_login_here">User Login Here</string>
    <string name="subtotal">Rp. 100.000,-</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sku">SKU</string>
    <string name="rincian_produk">Rincian Produk</string>
    <string name="stok">Stok</string>
    <string name="dikirim_dari">Dikirim Dari</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order_history">Order History</string>
    <string name="home">Home</string>
    <string name="_1">1</string>
    <string name="register_success">You are registered successfully</string>
    <string name="update_profile_success">Profile updated successfully</string>
    <string name="update_password_success">Change Password updated successfully</string>
    <string name="update_product_success">Update Product successfully</string>
    <string name="add_product_success">Product add successfully</string>
    <string name="checkout_success">Checkout successfully</string>
    <string name="payment_success">Payment successfully</string>
    <string name="update_resi_success">Update Resi successfully</string>
    <string name="updatepayment_success">Update Payment Status successfully</string>
    <string name="add_rekening_success">Rekening add successfully</string>
    <string name="add_jasa_success">Jasa Pengiriman add successfully</string>
    <string name="add_lokasi_success">Lokasi Pengiriman add successfully</string>
    <string name="add_metode_success">Metode Pembayaran add successfully</string>
    <string name="add_category_success">Category add successfully</string>
    <string name="tunggu_sebentar_ya">Tunggu Sebentar ya</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="empty_field">Please enter your %s</string>
    <string name="kurangalaamat">Please enter your address with the correct address</string>
    <string name="kurangnomor">Please enter your phone with the correct phone number </string>
    <string name="kurangnama">Please enter your name more than 2 characters</string>
    <string name="register_failed">Failed to register! %s</string>
    <string name="update_profile_failed">Failed to update your profile! %s</string>
    <string name="update_pass_failed">Failed to update your password! %s</string>
    <string name="update_product_failed">Failed to update your product! %s</string>
    <string name="add_product_failed">Failed to add your product! %s</string>
    <string name="checkout_failed">Failed to checkout your product! %s</string>
    <string name="add_rekening_failed">Gagal menambahkan rekening! %s</string>
    <string name="add_metode_failed">Gagal menambahkan Metode Pembayaran! %s</string>
    <string name="add_category_failed">Gagal menambahkan Category! %s</string>
    <string name="add_lokasi_failed">Gagal menambahkan lokasi pengiriman! %s</string>
    <string name="add_jasa_failed">Gagal menambahkan jasa pengiriman! %s</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="lokasi_pengiriman">Lokasi Pengiriman</string>
    <string name="jasa_pengiriman">Jasa Pengiriman</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="bukanadmin">Maaf, Anda bukan Admin</string>
    <string name="login_success">Login berhasil!</string>
    <string name="login_failed">Login gagal!</string>
    <string name="hello_user">Hello, %s</string>
    <string name="image_selection_failed">Something went wrong during image selection</string>
    <string name="read_storage_permission_denied">Oops! It seems like you just denied the permission needed. You can also allow it from settings.</string>
    <string name="name_product">Nama Produk</string>
    <string name="stock_product">Stok Produk</string>
    <string name="price_product">Harga Produk</string>
    <string name="desc_product">Deskripsi Produk</string>
    <string name="img_product">Gambar Produk</string>
    <string name="category_product">Kategori Produk</string>
    <string name="masukkan_nama_produk">Masukkan Nama Produk</string>
    <string name="masukkan_kategori_produk">Masukkan Kategori Produk</string>
    <string name="masukkan_harga_produk">Masukkan Harga Produk</string>
    <string name="masukkan_stok_produk">Masukkan Stok Produk</string>
    <string name="masukkan_deskripsi_produk">Masukkan Deskripsi Produk</string>
    <string name="update_resi">Update Resi</string>
    <string name="order_id">Order ID</string>
    <string name="keterangan">Keterangan</string>
    <string name="add_rekening">Tambah Rekening Baru</string>
    <string name="add_lokasi">Tambah Lokasi Baru</string>
    <string name="add_jasa">Tambah Jasa Pengiriman</string>
    <string name="add_metode">Tambah Metode Pembayaran</string>
    <string name="add_category">Tambah Kategori Produk</string>
    <string name="nama_rekening_bank">Nama Rekening Bank</string>
    <string name="nama_jasa">Nama Jasa Pengiriman</string>
    <string name="nama_lokasi">Nama Lokasi Pengiriman</string>
    <string name="masukkan_nama_rekening_bank">Masukkan Nama Rekening Bank</string>
    <string name="masukkan_nomor_rekening">Masukkan Nomor Rekening</string>
    <string name="pemilik_nomor_rekening">Pemilik Nomor Rekening</string>
    <string name="harga_jasa">Harga Pengiriman Jasa</string>
    <string name="alamat_lokasi">Alamat Lokasi</string>
    <string name="masukkan_nama_pemilik_rekening">Masukkan Nama Pemilik Rekening</string>
    <string name="metode_pembayaran_2">Metode Pembayaran 2</string>
    <string name="metode_pembayaran_1">Metode Pembayaran 1</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="transfer_antar_bank">Transfer Antar Bank</string>
    <string name="my_order_history">My Order History</string>
    <string name="pengiriman">Delivery :</string>
    <string name="info_pengiriman">Informasi Pengiriman :</string>
    <string name="payment">Payment </string>
    <string name="add_product">Add New Product</string>
    <string name="edit_product">Update Product</string>
    <string name="kategori">Kategori</string>
    <string name="selamat_ndatang">Selamat\nDatang,</string>
    <string name="penghasilan">Penghasilan</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="customers">Customers</string>
    <string name="settings">Settings</string>
    <string name="rp_0">Rp. 0</string>
    <string name="added_to_cart">%s added to cart</string>
    <string name="success_remove_from_cart">%s has been removed from cart</string>
    <string name="estimasi">Estimasi</string>
    <string name="not_enough_stock">Stok tidak cukup</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="choose_rekening_method">Choose Bank Account</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="sub_total">Subtotal</string>
    <string name="choose_delivery_service">Choose Delivery Service</string>
    <string name="choose_delivery_loc">Choose Delivery Location</string>
    <string name="paynow">Pay Now</string>
    <string name="transaction_out">Transaction Out</string>
    <string name="detail_of_transaction">Detail of transaction</string>
    <string name="detail_order">History Order Details</string>
    <string name="detail_of_yourOrder">Detail of your Order</string>
    <string name="go_back">Go Back</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="sent_money">Sent Money</string>
    <string name="nama_metode_pembayaran">Nama Metode Pembayaran</string>
    <string name="add_category_name">Nama Kategori</string>
    <string name="jenis_metode_pembayaran">Jenis Metode Pembayaran</string>
    <string name="empty_product_image">Silahkan tambahkan foto produk!</string>
    <string name="product_delete_success">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_new_password_not_match">Confirm New Password Not Match</string>
    <string name="old_password_not_match">Old Password Not Match</string>
    <string name="pilih_kategori_produk">Pilih kategori produk</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="edit_status">Konfirmasi Pembayaran</string>
    <string name="kirim_pesanan">Kirim Pesanan</string>
    <string name="pesanan_selesai">Pesanan telah selesai</string>
    <string name="sedang_dikirim">Sedang Dikirim</string>
    <string name="tampilkan_produk_yang_dibeli">Tampilkan Produk yang dibeli</string>
    <string name="tampilkan_produk_lagi">Tampilkan produk lagi</string>
    <string name="terima_pesanan">Terima pesanan</string>
</resources>