<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".ui.checkout.CheckoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingHorizontal="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/oval"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/checkout"
            android:textColor="@color/dark"
            android:textSize="@dimen/_19ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_19sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/pengiriman"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/fullname"
                android:textColor="@color/dark"
                android:textSize="@dimen/_12ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/App.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_light"
                    android:hint="@string/enter_your_name_here"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/gray3"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Aminurachma" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/address"
                android:textColor="@color/dark"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/App.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_light"
                    android:hint="@string/enter_your_address_here"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/gray3"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Jl.Bahahahahahahaha" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/mobile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/phone_number"
                android:textColor="@color/dark"
                android:textSize="@dimen/_12ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mobile"
                style="@style/App.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_light"
                    android:hint="@string/enter_your_phone_number_here"
                    android:inputType="number"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/gray3"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Aminurachma" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/payment"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>