<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/light"
	tools:context=".ui.profile.ProfileActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:paddingHorizontal="@dimen/_6sdp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/btn_back"
			android:layout_width="@dimen/_24sdp"
			android:layout_height="@dimen/_24sdp"
			android:background="@drawable/oval"
			android:foreground="?attr/selectableItemBackgroundBorderless"
			android:padding="@dimen/_4sdp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_left_arrow" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/rubik_bold"
			android:text="@string/profile"
			android:textColor="@color/dark"
			android:textSize="@dimen/_14ssp"
			app:layout_constraintBottom_toBottomOf="@+id/btn_back"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/btn_back" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:scrollbars="none"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/_20sdp">

			<de.hdodenhof.circleimageview.CircleImageView
				android:id="@+id/img_avatar"
				android:layout_width="@dimen/_100sdp"
				android:layout_height="@dimen/_100sdp"
				android:scaleType="centerCrop"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:src="@tools:sample/avatars" />

			<TextView
				android:id="@+id/name_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_20sdp"
				android:fontFamily="@font/rubik_regular"
				android:text="@string/fullname"
				android:textColor="@color/dark"
				android:textSize="@dimen/_12ssp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/til_name"
				style="@style/App.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_4sdp"
				app:boxStrokeColor="@color/gray3"
				app:boxStrokeWidth="1dp"
				app:layout_constraintEnd_toEndOf="@+id/name_label"
				app:layout_constraintStart_toStartOf="@+id/name_label"
				app:layout_constraintTop_toBottomOf="@+id/name_label">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edt_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/rubik_light"
					android:hint="@string/enter_your_name_here"
					android:inputType="textCapWords"
					android:textColor="@color/dark"
					android:textColorHint="@color/gray3"
					android:textSize="@dimen/_12ssp"
					tools:text="Aminurachma" />

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/email_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:fontFamily="@font/rubik_regular"
				android:text="@string/email"
				android:textColor="@color/dark"
				android:textSize="@dimen/_12ssp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/til_name" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/til_email"
				style="@style/App.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_4sdp"
				app:boxStrokeColor="@color/gray3"
				app:boxStrokeWidth="1dp"
				app:layout_constraintEnd_toEndOf="@+id/name_label"
				app:layout_constraintStart_toStartOf="@+id/name_label"
				app:layout_constraintTop_toBottomOf="@+id/email_label">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edt_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/rubik_light"
					android:hint="@string/enter_your_email_here"
					android:inputType="textEmailAddress"
					android:textColor="@color/dark"
					android:textColorHint="@color/gray3"
					android:textSize="@dimen/_12ssp" />

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/phone_number_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_8sdp"
				android:fontFamily="@font/rubik_regular"
				android:text="@string/phone_number"
				android:textColor="@color/dark"
				android:textSize="@dimen/_12ssp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/til_email" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/til_phone_number"
				style="@style/App.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_4sdp"
				app:boxStrokeColor="@color/gray3"
				app:boxStrokeWidth="1dp"
				app:layout_constraintEnd_toEndOf="@+id/phone_number_label"
				app:layout_constraintStart_toStartOf="@+id/phone_number_label"
				app:layout_constraintTop_toBottomOf="@+id/phone_number_label">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edt_phone_number"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/rubik_light"
					android:hint="@string/enter_your_phone_number_here"
					android:inputType="phone"
					android:textColor="@color/dark"
					android:textColorHint="@color/gray3"
					android:textSize="@dimen/_12ssp" />

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/address_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/rubik_regular"
				android:text="@string/address"
				android:layout_marginTop="@dimen/_8sdp"
				android:textColor="@color/dark"
				android:textSize="@dimen/_12ssp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/til_phone_number" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/til_address"
				style="@style/App.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:boxStrokeColor="@color/gray3"
				android:layout_marginTop="@dimen/_4sdp"
				app:boxStrokeWidth="1dp"
				app:layout_constraintEnd_toEndOf="@+id/phone_number_label"
				app:layout_constraintStart_toStartOf="@+id/phone_number_label"
				app:layout_constraintTop_toBottomOf="@+id/address_label">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edt_address"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/rubik_light"
					android:hint="@string/enter_your_address_here"
					android:inputType="textMultiLine"
					android:gravity="top"
					android:minHeight="@dimen/_60sdp"
					android:textColor="@color/dark"
					android:textColorHint="@color/gray3"
					android:textSize="@dimen/_12ssp" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_update_profile"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_45sdp"
				android:fontFamily="@font/rubik_medium"
				android:layout_marginTop="@dimen/_32sdp"
				android:text="@string/update"
				android:textAllCaps="false"
				app:strokeWidth="1dp"
				app:strokeColor="@color/colorPrimary"
				android:textColor="@color/colorPrimary"
				android:textSize="@dimen/_12ssp"
				app:cornerRadius="@dimen/_8sdp"
				app:layout_constraintTop_toBottomOf="@+id/til_address" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_logout"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_45sdp"
				android:fontFamily="@font/rubik_medium"
				android:layout_marginTop="@dimen/_32sdp"
				android:text="@string/logout"
				android:textAllCaps="false"
				app:strokeWidth="1dp"
				app:strokeColor="@color/colorPrimary"
				android:textColor="@color/colorPrimary"
				android:textSize="@dimen/_12ssp"
				app:cornerRadius="@dimen/_8sdp"
				app:layout_constraintTop_toBottomOf="@+id/btn_update_profile" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>